Src/Black.beard.Workflow.AntlrParser/Parser/Grammar/.antlr/WorkflowParser.java
// Generated from f:\Src\WorkTest\WorkflowTest\WorkflowTest\Parser\Grammar\WorkflowParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WorkflowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ACTION=1, AFTER=2, AND=3, BEFORE=4, CONST=5, CONCURENCY=6, DESCRIPTION=7, 
		DAY=8, DEFINE=9, DECIMAL=10, EVENT=11, EXECUTE=12, ENTER=13, EQUAL=14, 
		EXIT=15, EXPIRE=16, FRAGMENT=17, HOUR=18, INCLUDE=19, INITIALIZE=20, INTEGER=21, 
		MATCHING=22, MINUTE=23, NAME=24, NO=25, NOT=26, ON=27, OR=28, PARAMETER=29, 
		RULE=30, SWITCH=31, STATE=32, STORE=33, TEXT=34, TIME=35, VERSION=36, 
		WAITING=37, WITH=38, WHEN=39, WORKFLOW=40, CHAR_STRING=41, LEFT_PAREN=42, 
		RIGHT_PAREN=43, SEMICOLON=44, COLON=45, COMMA=46, DOT=47, AROBASE=48, 
		SPACES=49, NUMBER=50, SINGLE_LINE_COMMENT=51, MULTI_LINE_COMMENT=52, REGULAR_ID=53;
	public static final int
		RULE_script = 0, RULE_script_fragment = 1, RULE_script_full = 2, RULE_concurency = 3, 
		RULE_define_referenciel_statement = 4, RULE_define_state_statement = 5, 
		RULE_constant_declaration = 6, RULE_value = 7, RULE_state = 8, RULE_initializing = 9, 
		RULE_initializing_item = 10, RULE_on_event_statement = 11, RULE_switch_state = 12, 
		RULE_execute = 13, RULE_execute2 = 14, RULE_execute3 = 15, RULE_matchings = 16, 
		RULE_matching = 17, RULE_action = 18, RULE_arguments = 19, RULE_argument = 20, 
		RULE_argumentValue = 21, RULE_rule_conditions = 22, RULE_event_declaration_statement = 23, 
		RULE_action_declaration_statement = 24, RULE_rule_declaration_statement = 25, 
		RULE_parameters = 26, RULE_parameter = 27, RULE_type = 28, RULE_key = 29, 
		RULE_compositekey = 30, RULE_comment = 31, RULE_number = 32, RULE_numeric = 33, 
		RULE_string = 34, RULE_delay = 35;
	public static final String[] ruleNames = {
		"script", "script_fragment", "script_full", "concurency", "define_referenciel_statement", 
		"define_state_statement", "constant_declaration", "value", "state", "initializing", 
		"initializing_item", "on_event_statement", "switch_state", "execute", 
		"execute2", "execute3", "matchings", "matching", "action", "arguments", 
		"argument", "argumentValue", "rule_conditions", "event_declaration_statement", 
		"action_declaration_statement", "rule_declaration_statement", "parameters", 
		"parameter", "type", "key", "compositekey", "comment", "number", "numeric", 
		"string", "delay"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'ACTION'", "'AFTER'", "'AND'", "'BEFORE'", "'CONST'", "'CONCURENCY'", 
		"'DESCRIPTION'", "'DAY'", "'DEFINE'", "'DECIMAL'", "'EVENT'", "'EXECUTE'", 
		"'ENTER'", "'='", "'EXIT'", "'EXPIRE'", "'FRAGMENT'", "'HOUR'", "'INCLUDE'", 
		"'INITIALIZE'", "'INTEGER'", "'MATCHING'", "'MINUTE'", "'NAME'", "'NO'", 
		"'NOT'", "'ON'", "'OR'", "'PARAMETER'", "'RULE'", "'SWITCH'", "'STATE'", 
		"'STORE'", "'TEXT'", "'TIME'", "'VERSION'", "'WAITING'", "'WITH'", "'WHEN'", 
		"'WORKFLOW'", null, "'('", "')'", "';'", "':'", "','", "'.'", "'@'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ACTION", "AFTER", "AND", "BEFORE", "CONST", "CONCURENCY", "DESCRIPTION", 
		"DAY", "DEFINE", "DECIMAL", "EVENT", "EXECUTE", "ENTER", "EQUAL", "EXIT", 
		"EXPIRE", "FRAGMENT", "HOUR", "INCLUDE", "INITIALIZE", "INTEGER", "MATCHING", 
		"MINUTE", "NAME", "NO", "NOT", "ON", "OR", "PARAMETER", "RULE", "SWITCH", 
		"STATE", "STORE", "TEXT", "TIME", "VERSION", "WAITING", "WITH", "WHEN", 
		"WORKFLOW", "CHAR_STRING", "LEFT_PAREN", "RIGHT_PAREN", "SEMICOLON", "COLON", 
		"COMMA", "DOT", "AROBASE", "SPACES", "NUMBER", "SINGLE_LINE_COMMENT", 
		"MULTI_LINE_COMMENT", "REGULAR_ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WorkflowParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WorkflowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public Script_fragmentContext script_fragment() {
			return getRuleContext(Script_fragmentContext.class,0);
		}
		public Script_fullContext script_full() {
			return getRuleContext(Script_fullContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WorkflowParser.EOF, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FRAGMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				script_fragment();
				}
				break;
			case INCLUDE:
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				script_full();
				setState(74);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Script_fragmentContext extends ParserRuleContext {
		public TerminalNode FRAGMENT() { return getToken(WorkflowParser.FRAGMENT, 0); }
		public TerminalNode NAME() { return getToken(WorkflowParser.NAME, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode DESCRIPTION() { return getToken(WorkflowParser.DESCRIPTION, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<Define_referenciel_statementContext> define_referenciel_statement() {
			return getRuleContexts(Define_referenciel_statementContext.class);
		}
		public Define_referenciel_statementContext define_referenciel_statement(int i) {
			return getRuleContext(Define_referenciel_statementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(WorkflowParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(WorkflowParser.SEMICOLON, i);
		}
		public Script_fragmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script_fragment; }
	}

	public final Script_fragmentContext script_fragment() throws RecognitionException {
		Script_fragmentContext _localctx = new Script_fragmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_script_fragment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(FRAGMENT);
			setState(79);
			match(NAME);
			setState(80);
			key();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DESCRIPTION) {
				{
				setState(81);
				match(DESCRIPTION);
				setState(82);
				comment();
				}
			}

			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				define_referenciel_statement();
				setState(86);
				match(SEMICOLON);
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Script_fullContext extends ParserRuleContext {
		public NumberContext versionNumber;
		public TerminalNode NAME() { return getToken(WorkflowParser.NAME, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public List<TerminalNode> INCLUDE() { return getTokens(WorkflowParser.INCLUDE); }
		public TerminalNode INCLUDE(int i) {
			return getToken(WorkflowParser.INCLUDE, i);
		}
		public List<TerminalNode> CHAR_STRING() { return getTokens(WorkflowParser.CHAR_STRING); }
		public TerminalNode CHAR_STRING(int i) {
			return getToken(WorkflowParser.CHAR_STRING, i);
		}
		public TerminalNode VERSION() { return getToken(WorkflowParser.VERSION, 0); }
		public ConcurencyContext concurency() {
			return getRuleContext(ConcurencyContext.class,0);
		}
		public TerminalNode DESCRIPTION() { return getToken(WorkflowParser.DESCRIPTION, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode MATCHING() { return getToken(WorkflowParser.MATCHING, 0); }
		public MatchingsContext matchings() {
			return getRuleContext(MatchingsContext.class,0);
		}
		public List<Define_referenciel_statementContext> define_referenciel_statement() {
			return getRuleContexts(Define_referenciel_statementContext.class);
		}
		public Define_referenciel_statementContext define_referenciel_statement(int i) {
			return getRuleContext(Define_referenciel_statementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(WorkflowParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(WorkflowParser.SEMICOLON, i);
		}
		public InitializingContext initializing() {
			return getRuleContext(InitializingContext.class,0);
		}
		public List<Define_state_statementContext> define_state_statement() {
			return getRuleContexts(Define_state_statementContext.class);
		}
		public Define_state_statementContext define_state_statement(int i) {
			return getRuleContext(Define_state_statementContext.class,i);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public Script_fullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script_full; }
	}

	public final Script_fullContext script_full() throws RecognitionException {
		Script_fullContext _localctx = new Script_fullContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_script_full);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE) {
				{
				{
				setState(92);
				match(INCLUDE);
				setState(93);
				match(CHAR_STRING);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(NAME);
			setState(100);
			key();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VERSION) {
				{
				setState(101);
				match(VERSION);
				setState(102);
				((Script_fullContext)_localctx).versionNumber = number();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONCURENCY) {
				{
				setState(105);
				concurency();
				}
			}

			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DESCRIPTION) {
				{
				setState(108);
				match(DESCRIPTION);
				setState(109);
				comment();
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MATCHING) {
				{
				setState(112);
				match(MATCHING);
				setState(113);
				matchings();
				}
			}

			setState(119); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(116);
					define_referenciel_statement();
					setState(117);
					match(SEMICOLON);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(121); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIALIZE) {
				{
				setState(123);
				initializing();
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINE) {
				{
				{
				setState(126);
				define_state_statement();
				setState(127);
				match(SEMICOLON);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcurencyContext extends ParserRuleContext {
		public NumberContext concurencyNumber;
		public TerminalNode CONCURENCY() { return getToken(WorkflowParser.CONCURENCY, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ConcurencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concurency; }
	}

	public final ConcurencyContext concurency() throws RecognitionException {
		ConcurencyContext _localctx = new ConcurencyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_concurency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(134);
			match(CONCURENCY);
			setState(135);
			((ConcurencyContext)_localctx).concurencyNumber = number();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_referenciel_statementContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(WorkflowParser.DEFINE, 0); }
		public Event_declaration_statementContext event_declaration_statement() {
			return getRuleContext(Event_declaration_statementContext.class,0);
		}
		public Rule_declaration_statementContext rule_declaration_statement() {
			return getRuleContext(Rule_declaration_statementContext.class,0);
		}
		public Action_declaration_statementContext action_declaration_statement() {
			return getRuleContext(Action_declaration_statementContext.class,0);
		}
		public Constant_declarationContext constant_declaration() {
			return getRuleContext(Constant_declarationContext.class,0);
		}
		public Define_referenciel_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_referenciel_statement; }
	}

	public final Define_referenciel_statementContext define_referenciel_statement() throws RecognitionException {
		Define_referenciel_statementContext _localctx = new Define_referenciel_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_define_referenciel_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(DEFINE);
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EVENT:
				{
				setState(138);
				event_declaration_statement();
				}
				break;
			case RULE:
				{
				setState(139);
				rule_declaration_statement();
				}
				break;
			case ACTION:
				{
				setState(140);
				action_declaration_statement();
				}
				break;
			case CONST:
				{
				setState(141);
				constant_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_state_statementContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(WorkflowParser.DEFINE, 0); }
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public Define_state_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_state_statement; }
	}

	public final Define_state_statementContext define_state_statement() throws RecognitionException {
		Define_state_statementContext _localctx = new Define_state_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_define_state_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(DEFINE);
			setState(145);
			state();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_declarationContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(WorkflowParser.CONST, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Constant_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_declaration; }
	}

	public final Constant_declarationContext constant_declaration() throws RecognitionException {
		Constant_declarationContext _localctx = new Constant_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constant_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(CONST);
			setState(148);
			key();
			setState(149);
			value();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CHAR_STRING) {
				{
				setState(150);
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public TerminalNode REGULAR_ID() { return getToken(WorkflowParser.REGULAR_ID, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_value);
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				string();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				number();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				delay();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				match(REGULAR_ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public TerminalNode STATE() { return getToken(WorkflowParser.STATE, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<ExecuteContext> execute() {
			return getRuleContexts(ExecuteContext.class);
		}
		public ExecuteContext execute(int i) {
			return getRuleContext(ExecuteContext.class,i);
		}
		public List<On_event_statementContext> on_event_statement() {
			return getRuleContexts(On_event_statementContext.class);
		}
		public On_event_statementContext on_event_statement(int i) {
			return getRuleContext(On_event_statementContext.class,i);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_state);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(STATE);
			setState(160);
			key();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CHAR_STRING) {
				{
				setState(161);
				comment();
				}
			}

			setState(167);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(164);
					execute();
					}
					} 
				}
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXPIRE || _la==ON) {
				{
				{
				setState(170);
				on_event_statement();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitializingContext extends ParserRuleContext {
		public TerminalNode INITIALIZE() { return getToken(WorkflowParser.INITIALIZE, 0); }
		public TerminalNode WORKFLOW() { return getToken(WorkflowParser.WORKFLOW, 0); }
		public List<Initializing_itemContext> initializing_item() {
			return getRuleContexts(Initializing_itemContext.class);
		}
		public Initializing_itemContext initializing_item(int i) {
			return getRuleContext(Initializing_itemContext.class,i);
		}
		public InitializingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initializing; }
	}

	public final InitializingContext initializing() throws RecognitionException {
		InitializingContext _localctx = new InitializingContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_initializing);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(INITIALIZE);
			setState(177);
			match(WORKFLOW);
			setState(179); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(178);
				initializing_item();
				}
				}
				setState(181); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ON );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Initializing_itemContext extends ParserRuleContext {
		public TerminalNode ON() { return getToken(WorkflowParser.ON, 0); }
		public TerminalNode EVENT() { return getToken(WorkflowParser.EVENT, 0); }
		public List<KeyContext> key() {
			return getRuleContexts(KeyContext.class);
		}
		public KeyContext key(int i) {
			return getRuleContext(KeyContext.class,i);
		}
		public TerminalNode SWITCH() { return getToken(WorkflowParser.SWITCH, 0); }
		public TerminalNode WHEN() { return getToken(WorkflowParser.WHEN, 0); }
		public Rule_conditionsContext rule_conditions() {
			return getRuleContext(Rule_conditionsContext.class,0);
		}
		public Initializing_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initializing_item; }
	}

	public final Initializing_itemContext initializing_item() throws RecognitionException {
		Initializing_itemContext _localctx = new Initializing_itemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_initializing_item);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(ON);
			setState(184);
			match(EVENT);
			setState(185);
			key();
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHEN) {
				{
				setState(186);
				match(WHEN);
				setState(187);
				rule_conditions(0);
				}
			}

			setState(190);
			match(SWITCH);
			setState(191);
			key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class On_event_statementContext extends ParserRuleContext {
		public TerminalNode ON() { return getToken(WorkflowParser.ON, 0); }
		public TerminalNode EVENT() { return getToken(WorkflowParser.EVENT, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode EXPIRE() { return getToken(WorkflowParser.EXPIRE, 0); }
		public TerminalNode AFTER() { return getToken(WorkflowParser.AFTER, 0); }
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public List<Switch_stateContext> switch_state() {
			return getRuleContexts(Switch_stateContext.class);
		}
		public Switch_stateContext switch_state(int i) {
			return getRuleContext(Switch_stateContext.class,i);
		}
		public On_event_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_on_event_statement; }
	}

	public final On_event_statementContext on_event_statement() throws RecognitionException {
		On_event_statementContext _localctx = new On_event_statementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_on_event_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ON:
				{
				setState(193);
				match(ON);
				setState(194);
				match(EVENT);
				setState(195);
				key();
				}
				break;
			case EXPIRE:
				{
				setState(196);
				match(EXPIRE);
				setState(197);
				match(AFTER);
				setState(198);
				delay();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(202); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(201);
				switch_state();
				}
				}
				setState(204); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXECUTE) | (1L << SWITCH) | (1L << STORE) | (1L << WAITING) | (1L << WHEN) | (1L << REGULAR_ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Switch_stateContext extends ParserRuleContext {
		public TerminalNode SWITCH() { return getToken(WorkflowParser.SWITCH, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode WHEN() { return getToken(WorkflowParser.WHEN, 0); }
		public Rule_conditionsContext rule_conditions() {
			return getRuleContext(Rule_conditionsContext.class,0);
		}
		public List<Execute2Context> execute2() {
			return getRuleContexts(Execute2Context.class);
		}
		public Execute2Context execute2(int i) {
			return getRuleContext(Execute2Context.class,i);
		}
		public Switch_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switch_state; }
	}
